--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PAYLOAD_SECRET=mysecret
+MONGODB_URL=mongodb+srv://mCiTaBEReVyi:k|~|H46UB/z4V6Hg=o@development.8g6yeug.mongodb.net/?retryWrites=true&w=majority
