--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PAYLOAD_SECRET=mysecret
-MONGODB_URL=mongodb+srv://mCiTaBEReVyi:k|~|H46UB/z4V6Hg=o@development.8g6yeug.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://mCiTaBEReVyi:i6Fm5ejMOJ4XH8zV@development.8g6yeug.mongodb.net/?retryWrites=true&w=majority
+NEXT_PUBLIC_SERVER_URL=http://localhost:3000
