--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-PAYLOAD_SECRET=mysecret
+PAYLOAD_SECRET=secret
 MONGODB_URL=mongodb+srv://mCiTaBEReVyi:i6Fm5ejMOJ4XH8zV@development.8g6yeug.mongodb.net/?retryWrites=true&w=majority
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+
+RESEND_API_KEY=re_ViSdjNYE_LAtyQDatCibMTpVxoMk35YKG
